compiler/testData/diagnostics/tests/regressions/kt402.jet
package kt402

fun getTypeChecker() : (Any)->Boolean {
  <!NO_RETURN_IN_FUNCTION_WITH_BLOCK_BODY, UNUSED_FUNCTION_LITERAL!>{ (a : Any) -> a is <!UNRESOLVED_REFERENCE!>T<!> }<!> // reports unsupported
}
fun f() : (Any) -> Boolean {
  return { (a : Any) -> a is String }
}